--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,17 +1,14 @@
 <header>
   <div class="spacer"></div>
   <h1 class="title"><a href="/">{{.Site.Title}}</a></h1>
+  <div class="nav-menu">
+    {{- partial "nav_menu.html" . -}}
+  </div>
   <div class="hamburger-menu">
     <input type="checkbox" id="menu-btn-check">
     <label for="menu-btn-check" class="menu-btn"><span></span></label>
     <div class="menu-content">
-      <ul>
-        {{ range .Site.Menus.main }}
-        <li>
-          <a href="{{ .URL }}">{{ .Name }}</a>
-        </li>
-        {{ end }}
-      </ul>
+      {{- partial "nav_menu.html" . -}}
     </div>
   </div>
 </header>
